--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -179,39 +179,22 @@ Seasonally, canopy buffering capacity is greater in wet than dry seasons, presum
 
 ## Leaf temperature 
 
-Leaf temperature ($T_{leaf}$) is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections), with leaves adjusted to their environment so as to maintain, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
+Leaf temperature ($T_{leaf}$) is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections) with leaves adjusted to their environment so as to maintain, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
 Leaves can be either cooler than air at high $T_{air}$ or warmer than air at low $T_{air}$ (limited homeothermy), and may sometimes be drastically warmer than $T_{air}$ [megathermy, @doughtyAreTropicalForests2008].
 While $T_{leaf}$ is most commonly within a few degrees of $T_{air}$, it is rarely exactly equal [poikilothermy, @cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
 
 ### Biophysical drivers
 
-**Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input through radiation versus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016; @michaletzPlantThermoregulationEnergetics2015].**
-The dominant component of a leaf's energy balance is net radiation ($R_n$, including shortwave and longwave), and high radiation loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).
-The dominant avenue of heat loss to the environment is latent heat flux ($\lambda E$), wherein the loss of energy required convert water from liquid to vapour state cools the leaf. 
-Evaporation ($E$) is controlled primarily by stomatal and boundary layer conductances, $g_s$ and $g_a$, and by the water vapour concentration difference between the leaf surface and the bulk air.
+**Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from radiation minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016; @michaletzPlantThermoregulationEnergetics2015].**
+The dominant component of a leaf's energy balance is net radiation ($R_n$, including shortwave and longwave). High radiation loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).
+The dominant avenue of heat loss to the environment is latent heat flux ($\lambda E$), wherein the loss of energy required to convert water from a liquid to a vapour state during evaporation and transpiration cools the leaf. 
+Evapotranspiration ($E$) is controlled primarily by stomatal and boundary layer conductances, $g_s$ and $g_a$, and by the water vapour concentration difference between the leaf surface and the bulk air.
 Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, which in turn increases with wind speed [Fig. `r fig_leaf_T`b,@daudetWindSpeedLeaf1999a] and decreases with leaf size (Fig. `r fig_leaf_T`d);
 decreases with $g_s$ (Fig. `r fig_leaf_T`e);
-and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fig_leaf_T`c).
+and decreases with vapor pressure deficit, or increases with RH (Fig. `r fig_leaf_T`c).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_fig3.png)
-
-**version 1 (for rest of biophyscial drivers subsection-- coauthors, please let us know which is better):**
-
-Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $g_a$; *i.e.*, boundary layer conductance) and $\lambda E$ (via $g_s$ *ie.* stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
-
-$g_a$ and $g_s$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles $E$ and $gs$ that dissapate heat [@songTreeSurfaceTemperature2020].
-
-Latent heat loss through maximum $g_s$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$ [@bonan_ecological_2016]. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`)[@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @dongBiophysicalHomoeostasisLeaf2017].
-
-Leaf size and physiology [see next section] influence $g_a$, $g_s$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer and higher $g_a$, that enables coupling with $T_{air}$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T` a). Therefore, smaller leaves with adequate water, will be most effective at cooling during high temperatures than larger leaves [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007;@fauset_differences_2018]. Additionally, under low raditation, large leaves can be cooler than small leaves due to greater $g_s$ [Fig. `r fig_leaf_T` d, @leighThickLeavesAvoid2012;@bonan_ecological_2016]. Sun leaves, such as in the upper canopies, have greater $gs$, due to greater stomatal density (Table 1) and lower thermal capacitance due to lower water potential than shade leaves. However, exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions [@millerOnlySunlitLeaves2021]. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in radiation or $T_{air}$, $T_{leaf}$-$T_{air}$ can easily become more elevated than sun leaves (Fig. `r fig_leaf_T`a)[@schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
-
-**Within forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, where vertical gradient of $T_{air}$ depends on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in sub canopies and the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $gs$, therefore, we would expect a stronger $T_{leaf}$ gradient in closed canopies where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e) [@millerOnlySunlitLeaves2021].
-On the other hand, open canopies, or lower canopy $LAI$ allow more turbulent air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
-
-
-**version 2 (for rest of biophyscial drivers subsection-- coauthors, please let us know which is better):**
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
@@ -221,15 +204,20 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 
 **These basic biophysical principles shape the propensity for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
+However, higher windspeeds such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
+
+**Vertical gradients**
 
 **Within closed-canopy forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
 Under hot conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
 Thus, understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
 The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
-Thus, understory leaves can remain cooler under lower radiation load, but their environment is not conducive to shedding excess heat, particularly under humid conditions, and their tendency towards lower leaf $g_s$ and thermal capacitance can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020]. 
+Thus, understory leaves or shade leaves in a canopy can remain cooler under lower radiation load, but their environment is not conducive to shedding excess heat, particularly under humid conditions, and their tendency towards lower leaf $g_s$ and thermal capacitance (capacity to hold heat) can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002]. 
 In contrast, under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated more in the canopy than the understory (Fig.`r fig_leaf_T`).
 Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limitation is steeper that that of shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
+
+**Vertical $T_{leaf}$ gradients can also vary with canopy structure (Fig. `r fig_leaf_T`).**
+$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. However, higher windspeeds and lower $RH$ (Fig. 2), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower leaf sensitivity to intercepted radiation (Fig. 3a) and higher increase rates of heat loss (Fig. 3b-e). In contrast, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves, as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
 
 ### In situ observations
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations.** 
@@ -354,7 +342,7 @@ Leaf thermal tolerances are more closely adapted to microclimate than macroclima
 
 Temperature sensitivity of respiration ($Q_{10}$) along a within canopy gradient remains uncertain where $Q_{10}$ can be constant within vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], and greater upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Additionally, lower canopy leaf respiration have also been reported to be more sensitive to changes in $T_{air}$ than upper canopy [@griffinCanopyPositionAffects2002]. Recent observations also suggest that tropical upper canopy leaves down-regulate $Q_{10}$ with rising temperature [@carterExperimentalWarmingTropical], and this may vary based on leaf age and leaf traits where in evergreen species, temperature responses of photosynthesis and $Q_{10}$ were greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].  
 
-Further, we would expect expect $Q_{10}$ to also vary with environmental conditions based on canopy-position effect gradient in respiration rates for Quercus rubra trees being much greater in mesic than in xeric sites [@xuSeasonalVariationTemperature2006] but further research is required to discern $Q_{10}$.
+Further, we would expect expect $Q_{10}$ to also vary with environmental conditions based on the evidence of canopy-position effect gradient in respiration rates for Quercus rubra trees being much greater in mesic than in xeric sites [@xuSeasonalVariationTemperature2006].
 
 ### VOC production
 
