some changes before sharing

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -321,7 +321,7 @@ Temperature can affect photosynthesis via direct and indirect pathways--directly
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderatly, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations also show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy [@carterExperimentalWarmingTropical 2021]. 
+Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderatly, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations also show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy [@carterExperimentalWarmingTropical 2021]. Further research is required to discern temperature sensitivity at a vertical gradient.
 
 @hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
