--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -691,6 +691,22 @@
   number = {6520}
 }
 
+@article{berveglieriForestCoverChange2021a,
+  title = {Forest Cover Change Analysis Based on Temporal Gradients of the Vertical Structure and Density},
+  author = {Berveglieri, Adilson and Imai, Nilton N. and M.G. Tommaselli, Antonio and Martins-Neto, Rorai P. and Takahashi Miyoshi, Gabriela and Honkavaara, Eija},
+  date = {2021-07},
+  journaltitle = {Ecological Indicators},
+  volume = {126},
+  pages = {107597},
+  issn = {1470160X},
+  doi = {10.1016/j.ecolind.2021.107597},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1470160X21002624},
+  urldate = {2021-07-17},
+  abstract = {Canopy height is an important attribute that allows characterizing the forest vertical structure and analyze changes in vegetation cover over time. The objective of this study is to develop an approach for a spatio-temporal analysis of the tropical forest canopy using multi-temporal photogrammetric images. The datasets based on film and digital cameras are used to generate canopy height models and extract structural variables (tree height, relative variance between tree heights, and density of higher trees in the upper canopy). The combination of these variables is used in the analysis. Each variable is segmented into ordinal categorical classes in its respective dataset with temporal class gradients being obtained between the periods of the multi-temporal datasets. Ex­ periments were conducted in a tropical forest under regeneration and with diversity of tree species in different successional stages. Three sets of images (years 1978, 2010, and 2017) were used for analyzing canopy cover changes. A classification based on histograms of gradient classes indicated and quantified the most frequent behavior of the canopy over time. The results showed that the most significant variations in cover changes could be explained by 13 classes of temporal gradients, which described 88\% of the canopy. This classification was validated with field data collected in sample plots. From the results, it can be concluded that the proposed approach provides accurate assessments of the spatio-temporal canopy cover changes for forest management.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\6WL6Z5BF\\Berveglieri et al. - 2021 - Forest cover change analysis based on temporal gra.pdf},
+  langid = {english}
+}
+
 @online{BiodiversityMeetsAtmosphere,
   title = {Biodiversity {{Meets}} the {{Atmosphere}}: {{A Global View}} of {{Forest Canopies}} | {{Science}}},
   url = {https://science.sciencemag.org/content/301/5630/183.abstract},
@@ -2843,6 +2859,42 @@
   number = {6}
 }
 
+@article{hanberryOpenForestEcosystems2020a,
+  title = {Open Forest Ecosystems: {{An}} Excluded State},
+  shorttitle = {Open Forest Ecosystems},
+  author = {Hanberry, Brice B. and Bragg, Don C. and Alexander, Heather D.},
+  date = {2020-09},
+  journaltitle = {Forest Ecology and Management},
+  volume = {472},
+  pages = {118256},
+  issn = {03781127},
+  doi = {10.1016/j.foreco.2020.118256},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112720310252},
+  urldate = {2021-07-17},
+  abstract = {Once dominant but now largely excluded from eastern North America, open forests of savannas to woodlands occupy the ecosystem gradient between grasslands and closed forests. These fire-maintained systems differ in structure, processes, and species from closed canopy, succession-driven forests that currently dominate this region. In functional open forest ecosystems, frequent, low to mixed severity and intensity surface fires limit tree regeneration, depending on factors such as overstory tree density, resulting in relatively stable structure where overstory trees co-exist with a largely herbaceous understory. Reduced and spatially variable tree densities in open forests result in unique environmental conditions and function. Trees in open forests typically represent a small fraction of the biodiversity, which instead resides in the rich herbaceous ground layer. Rather than being constrained by overstory disturbances, succession, and biological legacies, the permanently open structure and herbaceous communities of open forests support invertebrate and vertebrate species throughout their lifetimes. Transition from open to closed forests across most of eastern North America during the past century produced a “new normal,” in which excluded open forests remain largely unrecognized at considerable conservation costs, particularly loss of key processes and wildlife species associated with a matrix of co-dominant tree and herbaceous layers. Management for open forests emphasizes the understory herbaceous plant community, similar to ephemeral seral stages of successional forest, rather than tree regeneration to produce an alternative outcome in structure, function, and support for biodiversity.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\DRM4WL4V\\Hanberry et al. - 2020 - Open forest ecosystems An excluded state.pdf},
+  langid = {english}
+}
+
+@article{hanberryReconceptualizationOpenOak2018,
+  title = {A Reconceptualization of Open Oak and Pine Ecosystems of Eastern {{North America}} Using a Forest Structure Spectrum},
+  author = {Hanberry, Brice B. and Bragg, Don C. and Hutchinson, Todd F.},
+  date = {2018},
+  journaltitle = {Ecosphere},
+  volume = {9},
+  pages = {e02431},
+  issn = {2150-8925},
+  doi = {10.1002/ecs2.2431},
+  url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecs2.2431},
+  urldate = {2021-07-17},
+  abstract = {We present a reconceptualization of forests in eastern North America by differentiating the ecological characteristics of open oak (Quercus) and pine (Pinus) forests from closed successional and old-growth forests. Despite historical abundance of savannas and woodlands, the fundamental ecology of open forest ecosystems remains ill-defined when compared to either closed forests or grasslands. Open forests were characterized by simple internal stand structure consisting of a single stratum of variably spaced, often very old overstory trees and limited midstory, maintained by understory disturbance that controlled tree regeneration and allowed instead a taxonomically rich herbaceous groundlayer. In contrast, closed forests have dense woody growth throughout the vertical profile, limiting herbaceous plants. To provide further clarity about these ecosystems, we developed a canopy closure spectrum model dependent on the interactions between prevailing disturbance regimes of the historical and current eras, which affect either the tree understory (regeneration) or overstory, and tree traits of fire and shade tolerance. Recognition of different stand structures, disturbance regimes, and their interrelationships should expand understanding of open forests and limit ecological misunderstandings and restoration misapplications, thereby improving management of these once historically extensive ecosystems.},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/ecs2.2431},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\952HY2S2\\Hanberry et al. - 2018 - A reconceptualization of open oak and pine ecosyst.pdf;C\:\\Users\\Me\\Zotero\\storage\\YC8AH9ZP\\ecs2.html},
+  keywords = {fire,forest management,old-growth,savannas,succession,woodlands},
+  langid = {english},
+  number = {10}
+}
+
 @article{hansenVariationPigmentComposition2002a,
   title = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest: A Comparative Study on Deciduous Tree Species Differing in Shade Tolerance},
   shorttitle = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest},
@@ -3801,21 +3853,20 @@
   number = {3}
 }
 
-@article{konradLeafTemperatureIts,
-  title = {Leaf Temperature and Its Dependence on Atmospheric {{CO2}} and Leaf Size},
+@article{konradLeafTemperatureIts2021,
+  title = {Leaf Temperature and Its Dependence on Atmospheric {{CO}} {\textsubscript{2}} and Leaf Size},
   author = {Konrad, Wilfried and Katul, Gabriel and Roth‐Nebelsick, Anita},
+  date = {2021-02},
   journaltitle = {Geological Journal},
-  volume = {n/a},
-  issn = {1099-1034},
+  volume = {56},
+  pages = {866--885},
+  issn = {0072-1050, 1099-1034},
   doi = {10.1002/gj.3757},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/gj.3757},
-  urldate = {2020-10-29},
-  abstract = {There is general concern that the rapid increase in atmospheric CO2 concentration will lead to reduced stomatal conductance and subsequent increases in leaf temperature. Such an increase in leaf temperature is expected to adversely impact a plethora of processes connected to leaf metabolism and microbial/fungal communities on leaves. A model is proposed that combines the leaf energy balance with leaf gas exchange and photosynthesis to explore such issues. The model represents a hybrid ecological/physiological approach described by systems of equations based on steady-state leaf-gas exchange theories and leaf energy/radiation balance, equilibrium thermodynamics within the leaf, stomatal data, and atmospheric CO2 concentration. The model allows separating air from leaf temperatures thereby permitting exploration of the dependence of leaf cooling or heating for any combination of environmental conditions (e.g., wind velocity, atmospheric humidity, and atmospheric CO2 level), anatomic leaf properties (e.g., leaf size), and physiologic quantities (e.g., assimilation rate and transpiration rate). The model permits to distinguish whether leaf cooling or heating is to be expected if these parameters are varied. Based on model calculations, it is shown that leaf temperature is far more impacted by leaf size or wind speed than reduction in stomatal conductance caused by elevated atmospheric CO2. The model results are consistent with measurements of leaf cooling and heating.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/gj.3757},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\C27KLKL3\\Konrad et al. - Leaf temperature and its dependence on atmospheric.pdf;C\:\\Users\\Me\\Zotero\\storage\\4RJZLQZF\\gj.html;C\:\\Users\\Me\\Zotero\\storage\\XR79JMJV\\gj.html},
-  keywords = {atmospheric CO2,gas exchange,leaf cooling,leaf energy exchange,leaf heating,leaf size},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/gj.3757},
+  urldate = {2021-07-17},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AAZ3XKMC\\gj.pdf},
   langid = {english},
-  number = {n/a}
+  number = {2}
 }
 
 @article{kornerWorldwideStudyHigh2004a,
@@ -8608,6 +8659,13 @@
   url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/epdf/10.1111/gcb.13477},
   urldate = {2021-02-23},
   file = {C\:\\Users\\Me\\Zotero\\storage\\V7RAARTR\\gcb.html}
+}
+
+@online{ThermalSensitivityTropical,
+  title = {Thermal Sensitivity of Tropical Trees | {{Science}}},
+  url = {https://science-sciencemag-org.smithsonian.idm.oclc.org/content/368/6493/840.1/tab-pdf},
+  urldate = {2021-07-17},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\X8TZQS46\\tab-pdf.html}
 }
 
 @article{thom_effects_2020,
