--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -147,31 +147,31 @@ While the focus here is on vertical gradients, it is important to note that in h
 Foliage distribution is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
 Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
 In temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [e.g., SCBI, Fig. `r fig_NEON_vertical`a, @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. 
-In open canopy forests, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
-Soil moisture conditions, topography, and gap formations followed by disturbance all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. 
+In open canopy forests, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
+Soil moisture conditions, topography, and gap formations followed by disturbance all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting LAD patterns (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). 
 In this review, we focus on growing season conditions (peak LAD) unless otherwise noted.
 
-**Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the profile shape modified by leaf area index ($LAI$), canopy height, canopy structure, and across species and forest types [Figs. `r fig_NEON_vertical`b-d, `r SIfig_NEON_all`, @koike_leaf_2001].** 
+**Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the profile shape modified by leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Figs. `r fig_NEON_vertical`b-d, `r SIfig_NEON_all`, @koike_leaf_2001].** 
 This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than under more open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Figs. `r fig_NEON_vertical`d, `r SIfig_NEON_all`, @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
 **Wind speeds are also higher at the top of the canopy, owing to the effect of buffering with canopy height [@juckerCanopyStructureTopography2018].**
-Wind speed increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @mcgregor_tree_nodate; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021] to open savannas [@curtis_intracanopy_2019], including all 22 forested NEON sites (Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`). 
+Wind speed increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @mcgregor_tree_nodate; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021] to open forests and savannas [@curtis_intracanopy_2019; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018], including all 22 forested NEON sites (Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`). 
 Specifically, across the NEON sites, July maximum daily wind speeds averaged up to 4.1 m s^-1^ higher at the top of the NEON vertical profile than at the bottom, where maximum wind speeds averaged $\le$ 1.1 m s^-1^ (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
 
-**Atmospheric concentrations carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
+**Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
 Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
-Relative humidity, $RH$, tends to be higher in the understory and decreases with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
-Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
-In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air}$ and $VPD$ in the understory are further decreased with increasing canopy height and $LAI$ [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
+Relative humidity, RH, tends to be higher in the understory and decreases with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
+Dense-canopy forests maintain higher daily maximum RH below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
+In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air}$ and VPD in the understory are further decreased with increasing canopy height and LAI [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [@frenneForestMicroclimatesClimate2021]. 
 Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@frenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
-Notably, this pattern can be reversed in open canopy forests or sparse stands, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
+Notably, this pattern can be reversed in open forests, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
 **The buffering patterns described above vary geographically, seasonally, and across forests types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, @frenneForestMicroclimatesClimate2021].**
 The strength of buffering increases with canopy density -- for example, across gradients of elevation [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018], moisture, and proximity to water, for example in riparian forests [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019].
@@ -186,7 +186,7 @@ While $T_{leaf}$ is most commonly within a few degrees of $T_{air}$, it is rarel
 
 ### Biophysical drivers
 
-**Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from radiation minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016; @michaletzPlantThermoregulationEnergetics2015].**
+**Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based via biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from radiation minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016; @michaletzPlantThermoregulationEnergetics2015].**
 The dominant component of a leaf's energy balance is net radiation ($R_n$, including shortwave and longwave). High radiation loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).
 The dominant avenue of heat loss to the environment is latent heat flux ($\lambda E$), wherein the loss of energy required to convert water from a liquid to a vapour state during evaporation and transpiration cools the leaf. 
 Evapotranspiration ($E$) is controlled primarily by stomatal and boundary layer conductances, $g_s$ and $g_a$, and by the water vapour concentration difference between the leaf surface and the bulk air.
@@ -199,33 +199,33 @@ and decreases with vapor pressure deficit, or increases with RH (Fig. `r fig_lea
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
 However, when inadequate water supply -- for example under drought -- causes leaf water demand to exceed water transport, conservation of water ($g_s$ limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
-Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads, but during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @pauTropicalForestTemperature2018].
-With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$ will be most effective at cooling during high temperatures [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
+Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021].
+With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$ will be most effective at cooling during high temperatures [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
 
 **Vertical gradients**
 
-**These basic biophysical principles shape the propensity for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
+**These basic biophysical principles shape the propensities for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher windspeeds such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give upper canopy lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
+However, higher windspeeds such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give upper canopy lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
 
 **Vertical $T_{leaf}$ gradients can also vary with canopy structure (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves, as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
+$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat), as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
 
 **Within closed-canopy forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
 Under hot conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
 Thus, understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
 The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
-Thus, understory leaves or shade leaves in a canopy can remain cooler under lower radiation load, but their environment is not conducive to shedding excess heat, particularly under humid conditions, and their tendency towards lower leaf $g_s$ and thermal capacitance (capacity to hold heat) can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002]. 
+Thus, understory leaves and within canopy shade leaves can remain cooler under lower radiation load, but their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002]. 
 In contrast, under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated more in the canopy than the understory (Fig.`r fig_leaf_T`).
 Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limitation is steeper that that of shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 
 ### In situ observations
-**Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations.** 
+**Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in situ $T_{leaf}$ observations.** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy.
 In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high radiation loads [@carterExperimentalWarmingTropical; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, in open forests with lower $LAI$, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
-Greater $RH$ in inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
+Greater $RH$ in inner canopy can also increase $T_{leaf}$ relatively more than upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
 It is noteworthy that $T_{leaf}$ often differs substantially from that of branches and stems; for instance, exposed tropical tree bark can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 Thus, the vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
@@ -266,7 +266,7 @@ Sun leaves in the exposed canopy have traits that help avoid heat and water stre
 #### (Biochemical and elemental traits, and isoprenes)
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table 1). 
-Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].
+Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. The dissapation of excess light energy is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].
 
 Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity,  @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  
 
@@ -275,8 +275,8 @@ Further, higher heat tolerance in exposed canopies is facilitated by isoprenes i
 #### (Leaf lifecycles)
 
 Leaf age affects vulnerability to heat stress independent of light environment [e.g., Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016].
-*In evergreen species,* sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, less damage  accumulates [@millerOnlySunlitLeaves2021].
-Once leaves leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions between species, @niinemetsLeafAgeDependent2016]. 
+*In evergreen species,* sun leaves have shorter lifespans than shade leaves; upper canopy leaves are on average younger than subcanopy leaves, therefore operating closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, less damage  accumulates [@millerOnlySunlitLeaves2021].
+Once leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions between species, @niinemetsLeafAgeDependent2016]. 
 Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
 
 The timing of seasonal leaf loss or gain is influenced by vertical microclimate gradients, and in turn can alter biophysical and $T_{leaf}$ gradients in the forest [@rey-sanchez_spatial_2016].
@@ -317,11 +317,11 @@ Maximum $g_s$ increases with light environment, and is thus higher in the sun ex
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
 This is primarily driven by the greater light available to sun-leaves, that also have traits (Table 1, Table 2) allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
 
-Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). Irresversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). Irresversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderatly, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations also show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy [@carterExperimentalWarmingTropical 2021]. Further research is required to discern temperature sensitivity at a vertical gradient.
+Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy [@carterExperimentalWarmingTropical 2021]. Further research is required to discern temperature sensitivity at a vertical gradient.
 
 @hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
@@ -340,9 +340,9 @@ Leaf thermal tolerances are more closely adapted to microclimate than macroclima
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves [@chenLeafEconomicsSpectrum2020], but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-Temperature sensitivity of respiration ($Q_{10}$) along a within canopy gradient remains uncertain where $Q_{10}$ can be constant within vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], and greater upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Additionally, lower canopy leaf respiration has also been reported to be more sensitive to changes in $T_{air}$ than upper canopy [@griffinCanopyPositionAffects2002]. Recent observations also suggest that tropical upper canopy leaves down-regulate $Q_{10}$ with rising temperature [@carterExperimentalWarmingTropical], and this may vary based on leaf age and leaf traits where in evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].  
+Temperature sensitivity of respiration ($Q_{10}$) along a within canopy gradient remains uncertain where $Q_{10}$ can be constant within vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], and greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Additionally, lower canopy leaf respiration has also been reported to be more sensitive to changes in $T_{air}$ than upper canopy [@griffinCanopyPositionAffects2002]. Recent observations also suggest that tropical upper canopy leaves down-regulate $Q_{10}$ with rising temperature [@carterExperimentalWarmingTropical]; this may vary based on leaf age and leaf traits, as in evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].  
 
-Further, we would expect $Q_{10}$ to also vary with environmental conditions based on the evidence of canopy-position effect gradient in respiration rates for *Quercus rubra* trees being much greater in mesic than in xeric sites [@xuSeasonalVariationTemperature2006].
+Further, we would expect $Q_{10}$ to also vary with soil moisture based on the evidence of canopy-position effect gradients in respiration rates for *Quercus rubra* being much greater in mesic than in xeric sites [@xuSeasonalVariationTemperature2006].
 
 ### VOC production
 
