--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -954,6 +954,26 @@
   langid = {english}
 }
 
+@article{caronBigTreesDrive2021,
+  title = {Big Trees Drive Forest Structure Patterns across a Lowland {{Amazon}} Regrowth Gradient},
+  author = {Caron, Tassiana Maylla Fontoura and Chuma, Victor Juan Ulises Rodriguez and Sandi, Alexander Arévalo and Norris, Darren},
+  date = {2021-02-09},
+  journaltitle = {Sci Rep},
+  volume = {11},
+  pages = {3380},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-021-83030-5},
+  url = {https://www.nature.com/articles/s41598-021-83030-5},
+  urldate = {2021-07-17},
+  abstract = {Degraded Amazonian forests can take decades to recover and the ecological results of natural regeneration are still uncertain. Here we use field data collected across 15 lowland Amazon smallholder properties to examine the relationships between forest structure, mammal diversity, regrowth type, regrowth age, topography and hydrology. Forest structure was quantified together with mammal diversity in 30 paired regrowth-control plots. Forest regrowth stage was classified into three groups: late second-regrowth, early second-regrowth and abandoned pasture. Basal area in regrowth plots remained less than half that recorded in control plots even after 20–25~years. Although basal area did increase in sequence from pasture, early to late-regrowth plots, there was a significant decline in basal area of late-regrowth control plots associated with a decline in the proportion of large trees. Variation in different forest structure responses was explained by contrasting variables, with the proportion of small trees (DBH\,{$<$}\,20~cm) most strongly explained by topography (altitude and slope) whereas the proportion of large trees (DBH\,{$>$}\,60~cm) was explained by plot type (control vs. regrowth) and regrowth class. These findings support calls for increased efforts to actively conserve large trees to avoid retrogressive succession around edges of degraded Amazon forests.},
+  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Biodiversity;Conservation biology;Forest ecology;Restoration ecology;Tropical ecology Subject\_term\_id: biodiversity;conservation;forest-ecology;restoration-ecology;tropical-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7S7DLPL5\\Caron et al. - 2021 - Big trees drive forest structure patterns across a.pdf;C\:\\Users\\Me\\Zotero\\storage\\TWDFXLVY\\s41598-021-83030-5.html},
+  issue = {1},
+  langid = {english},
+  number = {1}
+}
+
 @thesis{carterEFFECTSINSITULEAFLEVEL2017,
   title = {{{EFFECTS OF IN}}-{{SITU LEAF}}-{{LEVEL CANOPY WARMING IN A NORTHERN HARDWOOD FOREST}}},
   author = {Carter, Kelsey},
